Admin UI is almost completed, and login is optimized